ci: dependabot groups to reduce the number of pull requests
Signed-off-by: Vincent Biret <vibiret@microsoft.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,25 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 10
+  groups:
+    eslint:
+      patterns:
+        - "*eslint*"
+    sinon:
+      patterns:
+        - "*sinon*"
+    chai:
+      patterns:
+        - "*chai*"
+    karma:
+      patterns:
+        - "*karma*"
+    mocha:
+      patterns:
+        - "*mocha*"
+    babel:
+      patterns:
+        - "*babel*"
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
